# my-stock

./: .editorconfig  .gitignore  README.md
backend/: Dockerfile  README.md  diagram.md  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  requirements.txt
backend/mystock/: asgi.py  settings.py  urls.py  wsgi.py
backend/mystock/core/: exceptions.py  storage.py  views.py
backend/mystock/dependent/: views.py
backend/mystock/market/: admin.py  apps.py  models.py  serializers.py  views.py
backend/mystock/market/fixtures/: stock.yaml  stock.yml  theme.yaml
backend/mystock/market/migrations/: 0001_initial.py  0002_auto_20220903_2221.py  0003_auto_20220909_2329.py  0004_theme.py
backend/mystock/mock/: apps.py  exceptions.py  models.py  serializers.py  views.py
backend/mystock/mock/migrations/: 0001_initial.py
backend/tests/: test_backend.py
frontend/: .eslintrc  .eslintrc.cjs  .gitignore  README.md  package.json  pnpm-lock.yaml  remix.config.js  tailwind.config.js  vite.config.ts
frontend/app/: root.tsx
frontend/app/components/: banner-section.tsx  disclaimer-section.tsx  dividend-section.tsx  error-dialog.tsx  exchange-rate-section.tsx  global-navigation.tsx  index.ts  ranking-section.tsx  section-divider.tsx
frontend/app/layouts/: content-wrapper.tsx  index.ts  page-container.tsx
frontend/app/plugins/: axios.ts
frontend/app/routes/: home.tsx  index.tsx  playground.tsx  search.tsx
frontend/src/: App.css  App.tsx
frontend/styles/: app.css
temp-frontend/: .gitignore  README.md  package.json
temp-frontend/app/: entry.server.tsx
(+37 files in other folders)
